--- a/wiki/UI.wiki
+++ b/wiki/UI.wiki
@@ -18,3 +18,9 @@ One of the major problems with J2ME application development is that the LCDUI do
 For example take the standard LCDUI check box.  To change the value on a Nokia phone you must highlight it, select it to bring up another screen with a Yes/No option, scroll to your option, and hit the enter button.  This is in comparison to the J4ME UI which shows a check box graphic and hitting any button toggles it.
 
 Don't just take our word for it.  Everyone does it.  The most popular J2ME applications out there, Opera Mini and Google Maps, both have written their own libraries that make similar UIs to J4ME.
+
+|| http://j4me.googlecode.com/svn/website/img/ProgressBar.png || http://j4me.googlecode.com/svn/website/img/TextBox.png ||
+|| *Progress bar components* || *Common text input fields* ||
+
+|| http://j4me.googlecode.com/svn/website/img/ScoreOutCaddieScreenshot.gif || http://j4me.googlecode.com/svn/website/img/SplashScreen.gif || http://j4me.googlecode.com/svn/website/img/EtchASketch.png ||
+|| *Complex free-form screens* || *Splash screens* || *Theme your applications* ||
